# repo3

./: CMakeLists.txt  Makefile  README.txt  Repo3Config.cmake.in  Repo3FindDeps.cmake
binary3/: CMakeLists.txt  binary3.c
library3/: CMakeLists.txt  library3.c
library3/public/: library3.h
